smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-unicode-escape4.smithy
// Parse error at line 4, column 24 near `)\n`: Invalid unicode escape character: `t`
namespace smithy.example

@documentation("\uaaat")
string MyString
